# component_shm

./: CMakeLists.txt  README.md  package.xml
include/component_shm/: shared_memory.hpp  shm_view.hpp
src/: shared_memory.cpp  shm_view.cpp
test/: test_shared_memory.cpp  test_shm_view.cpp
