<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>component_shm</name>
  <version>0.1.0</version>
  <description>Thread-safe, type-erased, in-process shared data registry with per-component remapping views for ROS 2 composable nodes.</description>
  <maintainer email="maintainer@example.com">component_shm maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
